--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,13 +4,17 @@ on:
       - "index.html"
 
 
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: write
     steps:
       - name: Get code
         uses: actions/checkout@v3
       - name: Deploy index.html
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token:  ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
